--- a/docs/Notes/Vue/01-Vue3核心概念.md
+++ b/docs/Notes/Vue/01-Vue3核心概念.md
@@ -1,4 +1,6 @@
-# MVC设计模式与MVVM设计模式
+# Vue基本概念
+
+## MVC设计模式与MVVM设计模式 
 
 使用Vue框架开发前端项目，最大的优势就是再也不用进行复杂的DOM操作了，我们只要关心数据的变化即可，Vue框架会帮我们把复杂的DOM进行渲染，这背后都要归功于他的设计思想，即MVVM设计模式。
 
@@ -35,3 +37,82 @@ MVVM设计模式比MVP模式的优势：
 Vue官网上的一段话：虽然没有完全遵循 MVVM 模型，但是 Vue 的设计也受到了它的启发。因此在文档中经常会使用 vm (ViewModel 的缩写) 这个变量名表示组件实例。
 
 MVVM 模型中 M 和 V 不能直接操作，需要VM层加持。但Vue比较灵活，可以直接去操作原生DOM，也就是直接去操作V层。
+
+
+
+## options API的编程风格与优势
+
+```js linenums="1"
+let vm = createApp({
+  methods: {},
+  computed: {},
+  watch: {},
+  data(){},
+  mounted(){}
+})
+```
+这种写法的优势：
+
+- 只有一个参数，不会出现参数顺序的问题，随意调整配置的位置
+- 非常清晰，语法化特别强
+- 非常适合添加默认值的
+
+## 声明式渲染及响应式数据实现原理
+
+Vue.js 的核心是一个允许采用简洁的模板语法来声明式地将数据渲染进 DOM 的系统：
+```html linenums="1"
+<div id="counter">
+  Counter: {{ counter }}
+</div>
+```
+```js linenums="1"
+const Counter = {
+  data() {
+    return {
+      counter: 0
+    }
+  }
+}
+Vue.createApp(Counter).mount('#counter')
+```
+声明式编程：不需要编写具体是如何实现的，直接调用声明就可以实现功能。SQL就是比较经典的声明式语言：
+```sql linenums="1"
+SELECT * from user WHERE username = xiaoming
+```
+```c linenums="1"
+for(var i=0;i<user.length;i++)
+{
+    if(user[i].username == "xiaoming")
+    {
+     print("find");
+     break;
+    }
+}
+```
+注意：数据是通过 {{ }} 模板语法来完成的，模板语法支持编写JS表达式
+
+响应式数据实现的原理：利用JS的Proxy对象。Proxy 用于修改某些操作的默认行为，等同于在语言层面做出修改，其实就是直接监控值的修改，当值发生改变的时候，可以监控到。
+```html linenums="1"
+<div id="app"></div>
+<script>
+    let data = new Proxy(
+        {
+            message: "hello",
+        },
+        {
+            get(target) {
+                console.log("get")
+                return target.message
+            },
+            set(target, key, value) {
+                console.log("set")
+                app.innerHTML = value;
+            },
+        }
+    )
+    app.innerHTML = data.message;
+    setTimeout(() => {
+        data.message = "hi"
+    }, 2000)
+</script>
+```
